kubernetes/sonarr/prod-d1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-web
  namespace: sonarr
  labels:
    app: sonarr
spec:
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
  selector:
    app: sonarr
