kubernetes/sonarr/prod-d1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: sonarr
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: sonarr.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr-web
                port:
                  number: 8989
  tls:
    - hosts:
        - sonarr.kube-prod-d1.mclacken.net
      secretName: sonarr-certificate-secret
